switch to using Instant instead of OffsetDateTime